{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 229,
  "lineage": "c1c3590d-ff2f-9b1b-62a3-62926708dfb2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP-LINUX",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP-NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0baf63b46921e77b6",
            "domain": "vpc",
            "id": "eipalloc-0baf63b46921e77b6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-193-245-88.compute-1.amazonaws.com",
            "public_ip": "44.193.245.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-NAT-GW"
            },
            "tags_all": {
              "Name": "EIP-NAT-GW"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-LINUX",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-LINUX-PRIVATE-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f8928b66d17a9d2",
            "arn": "arn:aws:ec2:us-east-1:669538425229:instance/i-02057ee6175f1ff01",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02057ee6175f1ff01",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-04a88ef6d88e6d55b"
              }
            ],
            "primary_network_interface_id": "eni-04a88ef6d88e6d55b",
            "private_dns": "ip-10-10-1-50.ec2.internal",
            "private_ip": "10.10.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07670cb9da17fa23a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029d5e93ceba9a773",
            "tags": {
              "Name": "EC2-LINUX-PRIVATE-A"
            },
            "tags_all": {
              "Name": "EC2-LINUX-PRIVATE-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac9323db89c48375"
            ]
          },
          "dependencies": [
            "aws_network_interface.NIC-LINUX-PRIVATE-A",
            "aws_security_group.SG-Web-server",
            "aws_subnet.subred-privada1",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-LINUX-PRIVATE-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f8928b66d17a9d2",
            "arn": "arn:aws:ec2:us-east-1:669538425229:instance/i-02b9d6e77b9e852d5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b9d6e77b9e852d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-05f22a63c2703cca2"
              }
            ],
            "primary_network_interface_id": "eni-05f22a63c2703cca2",
            "private_dns": "ip-10-10-2-50.ec2.internal",
            "private_ip": "10.10.2.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a7c1cbd445b1a085",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ec9437e003eeb59",
            "tags": {
              "Name": "Server-privado2"
            },
            "tags_all": {
              "Name": "Server-privado2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac9323db89c48375"
            ]
          },
          "dependencies": [
            "aws_network_interface.NIC-LINUX-PRIVATE-B",
            "aws_security_group.SG-Web-server",
            "aws_subnet.subred-privada2",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:internet-gateway/igw-0e654e4feb63b590b",
            "id": "igw-0e654e4feb63b590b",
            "owner_id": "669538425229",
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "dependencies": [
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "LoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669538425229:loadbalancer/app/LoadBalancer/6cca2f4c016f9a36",
            "arn_suffix": "app/LoadBalancer/6cca2f4c016f9a36",
            "desync_mitigation_mode": "defensive",
            "dns_name": "LoadBalancer-1152803107.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:669538425229:loadbalancer/app/LoadBalancer/6cca2f4c016f9a36",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "LoadBalancer",
            "security_groups": [
              "sg-0794baf5d7f72a7ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b976e6ca05606f2"
              },
              {
                "subnet_id": "subnet-0749002a235517107"
              }
            ],
            "subnets": [
              "subnet-05b976e6ca05606f2",
              "subnet-0749002a235517107"
            ],
            "tags": {
              "Name": "LoadBalancer"
            },
            "tags_all": {
              "Name": "LoadBalancer"
            },
            "vpc_id": "vpc-0a73d3a7ac6efdf99",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.SG-LoadBalancer",
            "aws_subnet.subred-publica1",
            "aws_subnet.subred-publica2",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Listener-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669538425229:listener/app/LoadBalancer/6cca2f4c016f9a36/f7204c9937ae7df7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669538425229:listener/app/LoadBalancer/6cca2f4c016f9a36/f7204c9937ae7df7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:669538425229:loadbalancer/app/LoadBalancer/6cca2f4c016f9a36",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.LoadBalancer",
            "aws_lb_target_group.TG-LoadBalancer",
            "aws_security_group.SG-LoadBalancer",
            "aws_subnet.subred-publica1",
            "aws_subnet.subred-publica2",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TARGET-GROUP-CLASES",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TARGET-GROUP-CLASES/a7ce36cb2228534d",
            "arn_suffix": "targetgroup/TARGET-GROUP-CLASES/a7ce36cb2228534d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TARGET-GROUP-CLASES/a7ce36cb2228534d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TARGET-GROUP-CLASES",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "dependencies": [
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-LoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9",
            "arn_suffix": "targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TG-LoadBalancer",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "dependencies": [
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ATTACH-TARGET-GROUP-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9-20220406173823880700000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9",
            "target_id": "i-02b9d6e77b9e852d5"
          },
          "dependencies": [
            "aws_instance.EC2-LINUX-PRIVATE-B",
            "aws_lb_target_group.TG-LoadBalancer",
            "aws_network_interface.NIC-LINUX-PRIVATE-B",
            "aws_security_group.SG-Web-server",
            "aws_subnet.subred-privada2",
            "aws_vpc.VPC-Proyecto"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9-20220406173823809800000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9",
            "target_id": "i-02b9d6e77b9e852d5"
          },
          "dependencies": [
            "aws_instance.EC2-LINUX-PRIVATE-B",
            "aws_lb_target_group.TG-LoadBalancer",
            "aws_network_interface.NIC-LINUX-PRIVATE-B",
            "aws_security_group.SG-Web-server",
            "aws_subnet.subred-privada2",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ATTACH-TARGET-GROUP-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9-20220406173833834500000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9",
            "target_id": "i-02057ee6175f1ff01"
          },
          "dependencies": [
            "aws_instance.EC2-LINUX-PRIVATE-A",
            "aws_lb_target_group.TG-LoadBalancer",
            "aws_network_interface.NIC-LINUX-PRIVATE-A",
            "aws_security_group.SG-Web-server",
            "aws_subnet.subred-privada1",
            "aws_vpc.VPC-Proyecto"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9-20220406173833916600000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:669538425229:targetgroup/TG-LoadBalancer/4ab7efe5c6b1d2b9",
            "target_id": "i-02057ee6175f1ff01"
          },
          "dependencies": [
            "aws_instance.EC2-LINUX-PRIVATE-A",
            "aws_lb_target_group.TG-LoadBalancer",
            "aws_network_interface.NIC-LINUX-PRIVATE-A",
            "aws_security_group.SG-Web-server",
            "aws_subnet.subred-privada1",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GateWay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0baf63b46921e77b6",
            "connectivity_type": "public",
            "id": "nat-0b76bdd5f21e50c76",
            "network_interface_id": "eni-0f6438ab8c019e3fa",
            "private_ip": "10.10.4.137",
            "public_ip": "44.193.245.88",
            "subnet_id": "subnet-05b976e6ca05606f2",
            "tags": {
              "Name": "NAT-GateWay"
            },
            "tags_all": {
              "Name": "NAT-GateWay"
            }
          },
          "dependencies": [
            "aws_eip.EIP-NAT-GW",
            "aws_subnet.subred-publica1",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "NIC-LINUX-PRIVATE-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:network-interface/eni-04a88ef6d88e6d55b",
            "id": "eni-04a88ef6d88e6d55b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:81:7e:43:64:ab",
            "owner_id": "669538425229",
            "private_ip": "10.10.1.50",
            "private_ip_list": [
              "10.10.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ac9323db89c48375"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029d5e93ceba9a773"
          },
          "dependencies": [
            "aws_security_group.SG-Web-server",
            "aws_subnet.subred-privada1",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "NIC-LINUX-PRIVATE-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:network-interface/eni-05f22a63c2703cca2",
            "id": "eni-05f22a63c2703cca2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:d2:8b:8a:94:1d",
            "owner_id": "669538425229",
            "private_ip": "10.10.2.50",
            "private_ip_list": [
              "10.10.2.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ac9323db89c48375"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ec9437e003eeb59"
          },
          "dependencies": [
            "aws_security_group.SG-Web-server",
            "aws_subnet.subred-privada2",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ROUTES-PRIVATE-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:route-table/rtb-02ea01dd1462fdada",
            "id": "rtb-02ea01dd1462fdada",
            "owner_id": "669538425229",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b76bdd5f21e50c76",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ROUTES-PRIVATE"
            },
            "tags_all": {
              "Name": "ROUTES-PRIVATE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EIP-NAT-GW",
            "aws_nat_gateway.NAT-GateWay",
            "aws_subnet.subred-publica1",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ROUTES-PRIVATE-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:route-table/rtb-0c1f622f845e51915",
            "id": "rtb-0c1f622f845e51915",
            "owner_id": "669538425229",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b76bdd5f21e50c76",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ROUTES-PRIVATE-B"
            },
            "tags_all": {
              "Name": "ROUTES-PRIVATE-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EIP-NAT-GW",
            "aws_nat_gateway.NAT-GateWay",
            "aws_subnet.subred-publica1",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rutas-Publicas2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:route-table/rtb-06cb6600b57e593be",
            "id": "rtb-06cb6600b57e593be",
            "owner_id": "669538425229",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e654e4feb63b590b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Rutas-Publicas2"
            },
            "tags_all": {
              "Name": "Rutas-Publicas2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web-gateway",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rutas-publicas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:route-table/rtb-0bbecb2171389046e",
            "id": "rtb-0bbecb2171389046e",
            "owner_id": "669538425229",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e654e4feb63b590b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rutas-publicas"
            },
            "tags_all": {
              "Name": "rutas-publicas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web-gateway",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ROUTES-SUBNETS-ASSOCIATION",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c14d612fcdefe8b",
            "route_table_id": "rtb-0bbecb2171389046e",
            "subnet_id": "subnet-05b976e6ca05606f2"
          },
          "dependencies": [
            "aws_internet_gateway.web-gateway",
            "aws_route_table.rutas-publicas",
            "aws_subnet.subred-publica1",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ROUTES-SUBNETS-ASSOCIATION-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017903d97b50105fa",
            "route_table_id": "rtb-06cb6600b57e593be",
            "subnet_id": "subnet-0749002a235517107"
          },
          "dependencies": [
            "aws_internet_gateway.web-gateway",
            "aws_route_table.Rutas-Publicas2",
            "aws_subnet.subred-publica2",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ROUTES-SUBNETS-PRIVATE-ASSOCIATION-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0470f02024718bbb7",
            "route_table_id": "rtb-02ea01dd1462fdada",
            "subnet_id": "subnet-029d5e93ceba9a773"
          },
          "dependencies": [
            "aws_eip.EIP-NAT-GW",
            "aws_nat_gateway.NAT-GateWay",
            "aws_route_table.ROUTES-PRIVATE-A",
            "aws_subnet.subred-privada1",
            "aws_subnet.subred-publica1",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ROUTES-SUBNETS-PRIVATE-ASSOCIATION-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5f5abd89c6586fb",
            "route_table_id": "rtb-0c1f622f845e51915",
            "subnet_id": "subnet-00ec9437e003eeb59"
          },
          "dependencies": [
            "aws_eip.EIP-NAT-GW",
            "aws_nat_gateway.NAT-GateWay",
            "aws_route_table.ROUTES-PRIVATE-B",
            "aws_subnet.subred-privada2",
            "aws_subnet.subred-publica1",
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-LoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:security-group/sg-0794baf5d7f72a7ad",
            "description": "Allow_Traffic_LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0794baf5d7f72a7ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow_Traffic_LB",
            "name_prefix": "",
            "owner_id": "669538425229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-LoadBalancer"
            },
            "tags_all": {
              "Name": "SG-LoadBalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:security-group/sg-0ac9323db89c48375",
            "description": "Allow_Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac9323db89c48375",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ping",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow_Traffic",
            "name_prefix": "",
            "owner_id": "669538425229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Web-server"
            },
            "tags_all": {
              "Name": "SG-Web-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-privada1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:subnet/subnet-029d5e93ceba9a773",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029d5e93ceba9a773",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669538425229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-privada1"
            },
            "tags_all": {
              "Name": "subred-privada1"
            },
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "dependencies": [
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-privada2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:subnet/subnet-00ec9437e003eeb59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec9437e003eeb59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669538425229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-privada2"
            },
            "tags_all": {
              "Name": "subred-privada2"
            },
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "dependencies": [
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:subnet/subnet-05b976e6ca05606f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b976e6ca05606f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669538425229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-publica1"
            },
            "tags_all": {
              "Name": "subred-publica1"
            },
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "dependencies": [
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:subnet/subnet-0749002a235517107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0749002a235517107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669538425229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-publica2"
            },
            "tags_all": {
              "Name": "subred-publica2"
            },
            "vpc_id": "vpc-0a73d3a7ac6efdf99"
          },
          "dependencies": [
            "aws_vpc.VPC-Proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-Proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669538425229:vpc/vpc-0a73d3a7ac6efdf99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08ecbff9191ad5694",
            "default_route_table_id": "rtb-0af2139305f0a8760",
            "default_security_group_id": "sg-0bca651e998b2c461",
            "dhcp_options_id": "dopt-077fb79d1f6743319",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a73d3a7ac6efdf99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af2139305f0a8760",
            "owner_id": "669538425229",
            "tags": {
              "Name": "VPC-Proyecto"
            },
            "tags_all": {
              "Name": "VPC-Proyecto"
            }
          }
        }
      ]
    }
  ]
}